Tue May 27 02:13:09 GMT 2014  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Hook up new Snipper API tests to actually be
	  used.

Tue May 27 02:09:49 GMT 2014  Mihai Bivol <mm.bivol@gmail.com>

	* tests/api_snipper.cc: Add Snipper API tests.

Tue May 27 02:04:26 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Add missing #include <config.h>.

Tue May 27 02:00:32 GMT 2014  Mihai Bivol <mm.bivol@gmail.com>

	* api/Makefile.mk,api/snipper.cc,api/snipperinternal.h,
	  include/xapian.h,include/xapian/snipper.h: Add Xapian::Snipper
	  class.

Mon May 26 05:52:22 GMT 2014  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/brass/brass_postlist.h,
	  backends/chert/chert_postlist.h,backends/database.h: Fix comment
	  typos.

Fri May 23 11:59:26 GMT 2014  Olly Betts <olly@survex.com>

	* api/matchspy.cc: Pass std::string by const reference.

Thu May 22 06:31:12 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Fix the check for a term which matches all
	  documents to use the sub-db termfreq, not the combined db termfreq.

Thu May 22 06:00:47 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: If a term matches all documents and its
	  weight doesn't depend on its wdf, we can optimise it to MatchAll
	  (the previous requirement that maxpart == 0 was unnecessarily
	  strict).

Thu May 22 05:52:15 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc,tests/api_percentages.cc: When we optimise
	  a postlist for a term which matches all documents to use MatchAll,
	  we still need to set a weight object on it to get percentages
	  calculated correctly.

Thu May 22 04:08:35 GMT 2014  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,matcher/localsubmatch.cc,
	  matcher/localsubmatch.h,matcher/queryoptimiser.h: Refactor to group
	  most of the code to create a postlist for a term and set its weight
	  into one place.

Mon May 19 00:08:04 GMT 2014  Olly Betts <olly@survex.com>
